--- a/kubernetes/apps/monitoring/dashboard-cloudflare.yaml
+++ b/kubernetes/apps/monitoring/dashboard-cloudflare.yaml
@@ -65,6 +65,7 @@ data:
             "reduceOptions": { "calcs": ["lastNotNull"], "fields": "", "values": false },
             "textMode": "auto"
           },
+          "timeShift": "2m",
           "title": "Requests (5m)",
           "type": "stat",
           "targets": [
@@ -97,6 +98,7 @@ data:
             "reduceOptions": { "calcs": ["lastNotNull"], "fields": "", "values": false },
             "textMode": "auto"
           },
+          "timeShift": "2m",
           "title": "Bandwidth (5m)",
           "type": "stat",
           "targets": [
@@ -129,6 +131,7 @@ data:
             "reduceOptions": { "calcs": ["lastNotNull"], "fields": "", "values": false },
             "textMode": "auto"
           },
+          "timeShift": "2m",
           "title": "Cached Requests (5m)",
           "type": "stat",
           "targets": [
@@ -167,6 +170,7 @@ data:
             "reduceOptions": { "calcs": ["lastNotNull"], "fields": "", "values": false },
             "textMode": "auto"
           },
+          "timeShift": "2m",
           "title": "Cache Hit Ratio",
           "type": "stat",
           "targets": [
@@ -203,6 +207,7 @@ data:
             "reduceOptions": { "calcs": ["lastNotNull"], "fields": "", "values": false },
             "textMode": "auto"
           },
+          "timeShift": "2m",
           "title": "Threats (5m)",
           "type": "stat",
           "targets": [
@@ -235,6 +240,7 @@ data:
             "reduceOptions": { "calcs": ["lastNotNull"], "fields": "", "values": false },
             "textMode": "auto"
           },
+          "timeShift": "2m",
           "title": "Unique Visitors (5m)",
           "type": "stat",
           "targets": [
@@ -278,6 +284,7 @@ data:
           "gridPos": { "h": 8, "w": 12, "x": 0, "y": 6 },
           "id": 10,
           "options": { "legend": { "calcs": ["mean", "max"], "displayMode": "table", "placement": "bottom" }, "tooltip": { "mode": "multi", "sort": "desc" } },
+          "timeShift": "2m",
           "title": "Requests by Zone",
           "type": "timeseries",
           "targets": [
@@ -318,6 +325,7 @@ data:
           "gridPos": { "h": 8, "w": 12, "x": 12, "y": 6 },
           "id": 11,
           "options": { "legend": { "calcs": ["mean", "max"], "displayMode": "table", "placement": "bottom" }, "tooltip": { "mode": "multi", "sort": "desc" } },
+          "timeShift": "2m",
           "title": "Requests by Status Code",
           "type": "timeseries",
           "targets": [
@@ -354,6 +362,7 @@ data:
           "gridPos": { "h": 8, "w": 12, "x": 0, "y": 14 },
           "id": 12,
           "options": { "legend": { "calcs": ["mean", "max"], "displayMode": "table", "placement": "bottom" }, "tooltip": { "mode": "multi", "sort": "desc" } },
+          "timeShift": "2m",
           "title": "Requests by Country (Top 10)",
           "type": "timeseries",
           "targets": [
@@ -389,6 +398,7 @@ data:
           "gridPos": { "h": 8, "w": 12, "x": 12, "y": 14 },
           "id": 13,
           "options": { "legend": { "calcs": ["mean", "max"], "displayMode": "table", "placement": "bottom" }, "tooltip": { "mode": "multi", "sort": "desc" } },
+          "timeShift": "2m",
           "title": "Requests by HTTP Method",
           "type": "timeseries",
           "targets": [
@@ -432,6 +442,7 @@ data:
           "gridPos": { "h": 8, "w": 12, "x": 0, "y": 23 },
           "id": 20,
           "options": { "legend": { "calcs": ["mean", "max"], "displayMode": "table", "placement": "bottom" }, "tooltip": { "mode": "multi", "sort": "desc" } },
+          "timeShift": "2m",
           "title": "Bandwidth by Zone",
           "type": "timeseries",
           "targets": [
@@ -471,6 +482,7 @@ data:
           "gridPos": { "h": 8, "w": 12, "x": 12, "y": 23 },
           "id": 21,
           "options": { "legend": { "calcs": ["mean", "max"], "displayMode": "table", "placement": "bottom" }, "tooltip": { "mode": "multi", "sort": "desc" } },
+          "timeShift": "2m",
           "title": "Bandwidth: Cached vs Uncached",
           "type": "timeseries",
           "targets": [
@@ -512,6 +524,7 @@ data:
           "gridPos": { "h": 8, "w": 12, "x": 0, "y": 31 },
           "id": 22,
           "options": { "legend": { "calcs": ["mean", "max"], "displayMode": "table", "placement": "bottom" }, "tooltip": { "mode": "multi", "sort": "desc" } },
+          "timeShift": "2m",
           "title": "Bandwidth by Content Type",
           "type": "timeseries",
           "targets": [
@@ -548,6 +561,7 @@ data:
           "gridPos": { "h": 8, "w": 12, "x": 12, "y": 31 },
           "id": 23,
           "options": { "legend": { "calcs": ["mean", "max"], "displayMode": "table", "placement": "bottom" }, "tooltip": { "mode": "multi", "sort": "desc" } },
+          "timeShift": "2m",
           "title": "Bandwidth by Country (Top 10)",
           "type": "timeseries",
           "targets": [
@@ -591,6 +605,7 @@ data:
           "gridPos": { "h": 8, "w": 12, "x": 0, "y": 40 },
           "id": 30,
           "options": { "legend": { "calcs": ["mean", "max"], "displayMode": "table", "placement": "bottom" }, "tooltip": { "mode": "multi", "sort": "desc" } },
+          "timeShift": "2m",
           "title": "Threats by Zone",
           "type": "timeseries",
           "targets": [
@@ -627,6 +642,7 @@ data:
           "gridPos": { "h": 8, "w": 12, "x": 12, "y": 40 },
           "id": 31,
           "options": { "legend": { "calcs": ["mean", "max"], "displayMode": "table", "placement": "bottom" }, "tooltip": { "mode": "multi", "sort": "desc" } },
+          "timeShift": "2m",
           "title": "Firewall Events",
           "type": "timeseries",
           "targets": [
@@ -663,6 +679,7 @@ data:
           "gridPos": { "h": 8, "w": 12, "x": 0, "y": 48 },
           "id": 32,
           "options": { "legend": { "calcs": ["mean", "max"], "displayMode": "table", "placement": "bottom" }, "tooltip": { "mode": "multi", "sort": "desc" } },
+          "timeShift": "2m",
           "title": "Threats by Country (Top 10)",
           "type": "timeseries",
           "targets": [
@@ -699,6 +716,7 @@ data:
           "gridPos": { "h": 8, "w": 12, "x": 12, "y": 48 },
           "id": 33,
           "options": { "legend": { "calcs": ["mean", "max"], "displayMode": "table", "placement": "bottom" }, "tooltip": { "mode": "multi", "sort": "desc" } },
+          "timeShift": "2m",
           "title": "Bots Detected by Country (Top 10)",
           "type": "timeseries",
           "targets": [
@@ -745,6 +763,7 @@ data:
           "gridPos": { "h": 8, "w": 12, "x": 0, "y": 57 },
           "id": 40,
           "options": { "legend": { "calcs": ["mean", "max"], "displayMode": "table", "placement": "bottom" }, "tooltip": { "mode": "multi", "sort": "desc" } },
+          "timeShift": "2m",
           "title": "Client & Server Errors",
           "type": "timeseries",
           "targets": [
@@ -790,6 +809,7 @@ data:
           "gridPos": { "h": 8, "w": 12, "x": 12, "y": 57 },
           "id": 41,
           "options": { "legend": { "calcs": ["mean", "max"], "displayMode": "table", "placement": "bottom" }, "tooltip": { "mode": "multi", "sort": "desc" } },
+          "timeShift": "2m",
           "title": "Error Rates",
           "type": "timeseries",
           "targets": [
@@ -832,6 +852,7 @@ data:
           "gridPos": { "h": 8, "w": 12, "x": 0, "y": 65 },
           "id": 42,
           "options": { "legend": { "calcs": ["mean", "max"], "displayMode": "table", "placement": "bottom" }, "tooltip": { "mode": "multi", "sort": "desc" } },
+          "timeShift": "2m",
           "title": "Origin Response Duration",
           "type": "timeseries",
           "targets": [
@@ -868,6 +889,7 @@ data:
           "gridPos": { "h": 8, "w": 12, "x": 12, "y": 65 },
           "id": 43,
           "options": { "legend": { "calcs": ["mean", "max"], "displayMode": "table", "placement": "bottom" }, "tooltip": { "mode": "multi", "sort": "desc" } },
+          "timeShift": "2m",
           "title": "Cache Hit Ratio by Zone",
           "type": "timeseries",
           "targets": [
@@ -911,6 +933,7 @@ data:
           "gridPos": { "h": 8, "w": 12, "x": 0, "y": 74 },
           "id": 50,
           "options": { "legend": { "calcs": ["mean", "max"], "displayMode": "table", "placement": "bottom" }, "tooltip": { "mode": "multi", "sort": "desc" } },
+          "timeShift": "2m",
           "title": "Worker Requests",
           "type": "timeseries",
           "targets": [
@@ -947,6 +970,7 @@ data:
           "gridPos": { "h": 8, "w": 12, "x": 12, "y": 74 },
           "id": 51,
           "options": { "legend": { "calcs": ["mean", "max"], "displayMode": "table", "placement": "bottom" }, "tooltip": { "mode": "multi", "sort": "desc" } },
+          "timeShift": "2m",
           "title": "Worker Errors",
           "type": "timeseries",
           "targets": [
@@ -983,6 +1007,7 @@ data:
           "gridPos": { "h": 8, "w": 12, "x": 0, "y": 82 },
           "id": 52,
           "options": { "legend": { "calcs": ["mean", "max"], "displayMode": "table", "placement": "bottom" }, "tooltip": { "mode": "multi", "sort": "desc" } },
+          "timeShift": "2m",
           "title": "Worker CPU Time",
           "type": "timeseries",
           "targets": [
@@ -1019,6 +1044,7 @@ data:
           "gridPos": { "h": 8, "w": 12, "x": 12, "y": 82 },
           "id": 53,
           "options": { "legend": { "calcs": ["mean", "max"], "displayMode": "table", "placement": "bottom" }, "tooltip": { "mode": "multi", "sort": "desc" } },
+          "timeShift": "2m",
           "title": "Worker Duration",
           "type": "timeseries",
           "targets": [
@@ -1061,6 +1087,7 @@ data:
           "gridPos": { "h": 8, "w": 12, "x": 0, "y": 91 },
           "id": 60,
           "options": { "legend": { "calcs": ["mean", "max"], "displayMode": "table", "placement": "bottom" }, "tooltip": { "mode": "multi", "sort": "desc" } },
+          "timeShift": "2m",
           "title": "Requests by SSL Protocol",
           "type": "timeseries",
           "targets": [
@@ -1094,6 +1121,7 @@ data:
             "reduceOptions": { "calcs": ["lastNotNull"], "fields": "", "values": false },
             "textMode": "auto"
           },
+          "timeShift": "2m",
           "title": "Exporter Status",
           "type": "stat",
           "targets": [
@@ -1126,6 +1154,7 @@ data:
             "reduceOptions": { "calcs": ["lastNotNull"], "fields": "", "values": false },
             "textMode": "auto"
           },
+          "timeShift": "2m",
           "title": "Zones Monitored",
           "type": "stat",
           "targets": [
@@ -1158,6 +1187,7 @@ data:
             "reduceOptions": { "calcs": ["lastNotNull"], "fields": "", "values": false },
             "textMode": "auto"
           },
+          "timeShift": "2m",
           "title": "Accounts",
           "type": "stat",
           "targets": [
