--- a/kubernetes/apps/monitoring/dashboard-cloudflare.yaml
+++ b/kubernetes/apps/monitoring/dashboard-cloudflare.yaml
@@ -65,7 +65,6 @@ data:
             "reduceOptions": { "calcs": ["lastNotNull"], "fields": "", "values": false },
             "textMode": "auto"
           },
-          "timeShift": "5m",
           "title": "Requests (5m)",
           "type": "stat",
           "targets": [
@@ -98,7 +97,6 @@ data:
             "reduceOptions": { "calcs": ["lastNotNull"], "fields": "", "values": false },
             "textMode": "auto"
           },
-          "timeShift": "5m",
           "title": "Bandwidth (5m)",
           "type": "stat",
           "targets": [
@@ -131,7 +129,6 @@ data:
             "reduceOptions": { "calcs": ["lastNotNull"], "fields": "", "values": false },
             "textMode": "auto"
           },
-          "timeShift": "5m",
           "title": "Cached Requests (5m)",
           "type": "stat",
           "targets": [
@@ -170,7 +167,6 @@ data:
             "reduceOptions": { "calcs": ["lastNotNull"], "fields": "", "values": false },
             "textMode": "auto"
           },
-          "timeShift": "5m",
           "title": "Cache Hit Ratio",
           "type": "stat",
           "targets": [
@@ -207,7 +203,6 @@ data:
             "reduceOptions": { "calcs": ["lastNotNull"], "fields": "", "values": false },
             "textMode": "auto"
           },
-          "timeShift": "5m",
           "title": "Threats (5m)",
           "type": "stat",
           "targets": [
@@ -240,7 +235,6 @@ data:
             "reduceOptions": { "calcs": ["lastNotNull"], "fields": "", "values": false },
             "textMode": "auto"
           },
-          "timeShift": "5m",
           "title": "Unique Visitors (5m)",
           "type": "stat",
           "targets": [
@@ -284,7 +278,6 @@ data:
           "gridPos": { "h": 8, "w": 12, "x": 0, "y": 6 },
           "id": 10,
           "options": { "legend": { "calcs": ["mean", "max"], "displayMode": "table", "placement": "bottom" }, "tooltip": { "mode": "multi", "sort": "desc" } },
-          "timeShift": "5m",
           "title": "Requests by Zone",
           "type": "timeseries",
           "targets": [
@@ -325,7 +318,6 @@ data:
           "gridPos": { "h": 8, "w": 12, "x": 12, "y": 6 },
           "id": 11,
           "options": { "legend": { "calcs": ["mean", "max"], "displayMode": "table", "placement": "bottom" }, "tooltip": { "mode": "multi", "sort": "desc" } },
-          "timeShift": "5m",
           "title": "Requests by Status Code",
           "type": "timeseries",
           "targets": [
@@ -362,7 +354,6 @@ data:
           "gridPos": { "h": 8, "w": 12, "x": 0, "y": 14 },
           "id": 12,
           "options": { "legend": { "calcs": ["mean", "max"], "displayMode": "table", "placement": "bottom" }, "tooltip": { "mode": "multi", "sort": "desc" } },
-          "timeShift": "5m",
           "title": "Requests by Country (Top 10)",
           "type": "timeseries",
           "targets": [
@@ -398,7 +389,6 @@ data:
           "gridPos": { "h": 8, "w": 12, "x": 12, "y": 14 },
           "id": 13,
           "options": { "legend": { "calcs": ["mean", "max"], "displayMode": "table", "placement": "bottom" }, "tooltip": { "mode": "multi", "sort": "desc" } },
-          "timeShift": "5m",
           "title": "Requests by HTTP Method",
           "type": "timeseries",
           "targets": [
@@ -442,7 +432,6 @@ data:
           "gridPos": { "h": 8, "w": 12, "x": 0, "y": 23 },
           "id": 20,
           "options": { "legend": { "calcs": ["mean", "max"], "displayMode": "table", "placement": "bottom" }, "tooltip": { "mode": "multi", "sort": "desc" } },
-          "timeShift": "5m",
           "title": "Bandwidth by Zone",
           "type": "timeseries",
           "targets": [
@@ -482,7 +471,6 @@ data:
           "gridPos": { "h": 8, "w": 12, "x": 12, "y": 23 },
           "id": 21,
           "options": { "legend": { "calcs": ["mean", "max"], "displayMode": "table", "placement": "bottom" }, "tooltip": { "mode": "multi", "sort": "desc" } },
-          "timeShift": "5m",
           "title": "Bandwidth: Cached vs Uncached",
           "type": "timeseries",
           "targets": [
@@ -524,7 +512,6 @@ data:
           "gridPos": { "h": 8, "w": 12, "x": 0, "y": 31 },
           "id": 22,
           "options": { "legend": { "calcs": ["mean", "max"], "displayMode": "table", "placement": "bottom" }, "tooltip": { "mode": "multi", "sort": "desc" } },
-          "timeShift": "5m",
           "title": "Bandwidth by Content Type",
           "type": "timeseries",
           "targets": [
@@ -561,7 +548,6 @@ data:
           "gridPos": { "h": 8, "w": 12, "x": 12, "y": 31 },
           "id": 23,
           "options": { "legend": { "calcs": ["mean", "max"], "displayMode": "table", "placement": "bottom" }, "tooltip": { "mode": "multi", "sort": "desc" } },
-          "timeShift": "5m",
           "title": "Bandwidth by Country (Top 10)",
           "type": "timeseries",
           "targets": [
@@ -605,7 +591,6 @@ data:
           "gridPos": { "h": 8, "w": 12, "x": 0, "y": 40 },
           "id": 30,
           "options": { "legend": { "calcs": ["mean", "max"], "displayMode": "table", "placement": "bottom" }, "tooltip": { "mode": "multi", "sort": "desc" } },
-          "timeShift": "5m",
           "title": "Threats by Zone",
           "type": "timeseries",
           "targets": [
@@ -642,7 +627,6 @@ data:
           "gridPos": { "h": 8, "w": 12, "x": 12, "y": 40 },
           "id": 31,
           "options": { "legend": { "calcs": ["mean", "max"], "displayMode": "table", "placement": "bottom" }, "tooltip": { "mode": "multi", "sort": "desc" } },
-          "timeShift": "5m",
           "title": "Requests by IP Class",
           "type": "timeseries",
           "targets": [
@@ -679,7 +663,6 @@ data:
           "gridPos": { "h": 8, "w": 12, "x": 0, "y": 48 },
           "id": 32,
           "options": { "legend": { "calcs": ["mean", "max"], "displayMode": "table", "placement": "bottom" }, "tooltip": { "mode": "multi", "sort": "desc" } },
-          "timeShift": "5m",
           "title": "Threats by Country (Top 10)",
           "type": "timeseries",
           "targets": [
@@ -716,7 +699,6 @@ data:
           "gridPos": { "h": 8, "w": 12, "x": 12, "y": 48 },
           "id": 33,
           "options": { "legend": { "calcs": ["mean", "max"], "displayMode": "table", "placement": "bottom" }, "tooltip": { "mode": "multi", "sort": "desc" } },
-          "timeShift": "5m",
           "title": "Bots Detected by Country (Top 10)",
           "type": "timeseries",
           "targets": [
@@ -763,7 +745,6 @@ data:
           "gridPos": { "h": 8, "w": 12, "x": 0, "y": 57 },
           "id": 40,
           "options": { "legend": { "calcs": ["mean", "max"], "displayMode": "table", "placement": "bottom" }, "tooltip": { "mode": "multi", "sort": "desc" } },
-          "timeShift": "5m",
           "title": "Client & Server Errors",
           "type": "timeseries",
           "targets": [
@@ -809,7 +790,6 @@ data:
           "gridPos": { "h": 8, "w": 12, "x": 12, "y": 57 },
           "id": 41,
           "options": { "legend": { "calcs": ["mean", "max"], "displayMode": "table", "placement": "bottom" }, "tooltip": { "mode": "multi", "sort": "desc" } },
-          "timeShift": "5m",
           "title": "Error Rates",
           "type": "timeseries",
           "targets": [
@@ -852,7 +832,6 @@ data:
           "gridPos": { "h": 8, "w": 12, "x": 0, "y": 65 },
           "id": 42,
           "options": { "legend": { "calcs": ["mean", "max"], "displayMode": "table", "placement": "bottom" }, "tooltip": { "mode": "multi", "sort": "desc" } },
-          "timeShift": "5m",
           "title": "Origin Response Duration",
           "type": "timeseries",
           "targets": [
@@ -889,7 +868,6 @@ data:
           "gridPos": { "h": 8, "w": 12, "x": 12, "y": 65 },
           "id": 43,
           "options": { "legend": { "calcs": ["mean", "max"], "displayMode": "table", "placement": "bottom" }, "tooltip": { "mode": "multi", "sort": "desc" } },
-          "timeShift": "5m",
           "title": "Cache Hit Ratio by Zone",
           "type": "timeseries",
           "targets": [
@@ -933,7 +911,6 @@ data:
           "gridPos": { "h": 8, "w": 12, "x": 0, "y": 74 },
           "id": 50,
           "options": { "legend": { "calcs": ["mean", "max"], "displayMode": "table", "placement": "bottom" }, "tooltip": { "mode": "multi", "sort": "desc" } },
-          "timeShift": "5m",
           "title": "Worker Requests",
           "type": "timeseries",
           "targets": [
@@ -970,7 +947,6 @@ data:
           "gridPos": { "h": 8, "w": 12, "x": 12, "y": 74 },
           "id": 51,
           "options": { "legend": { "calcs": ["mean", "max"], "displayMode": "table", "placement": "bottom" }, "tooltip": { "mode": "multi", "sort": "desc" } },
-          "timeShift": "5m",
           "title": "Worker Errors",
           "type": "timeseries",
           "targets": [
@@ -1007,7 +983,6 @@ data:
           "gridPos": { "h": 8, "w": 12, "x": 0, "y": 82 },
           "id": 52,
           "options": { "legend": { "calcs": ["mean", "max"], "displayMode": "table", "placement": "bottom" }, "tooltip": { "mode": "multi", "sort": "desc" } },
-          "timeShift": "5m",
           "title": "Worker CPU Time",
           "type": "timeseries",
           "targets": [
@@ -1044,7 +1019,6 @@ data:
           "gridPos": { "h": 8, "w": 12, "x": 12, "y": 82 },
           "id": 53,
           "options": { "legend": { "calcs": ["mean", "max"], "displayMode": "table", "placement": "bottom" }, "tooltip": { "mode": "multi", "sort": "desc" } },
-          "timeShift": "5m",
           "title": "Worker Duration",
           "type": "timeseries",
           "targets": [
@@ -1087,7 +1061,6 @@ data:
           "gridPos": { "h": 8, "w": 12, "x": 0, "y": 91 },
           "id": 60,
           "options": { "legend": { "calcs": ["mean", "max"], "displayMode": "table", "placement": "bottom" }, "tooltip": { "mode": "multi", "sort": "desc" } },
-          "timeShift": "5m",
           "title": "Requests by SSL Protocol",
           "type": "timeseries",
           "targets": [
@@ -1121,7 +1094,6 @@ data:
             "reduceOptions": { "calcs": ["lastNotNull"], "fields": "", "values": false },
             "textMode": "auto"
           },
-          "timeShift": "5m",
           "title": "Exporter Status",
           "type": "stat",
           "targets": [
@@ -1154,7 +1126,6 @@ data:
             "reduceOptions": { "calcs": ["lastNotNull"], "fields": "", "values": false },
             "textMode": "auto"
           },
-          "timeShift": "5m",
           "title": "Zones Monitored",
           "type": "stat",
           "targets": [
@@ -1187,7 +1158,6 @@ data:
             "reduceOptions": { "calcs": ["lastNotNull"], "fields": "", "values": false },
             "textMode": "auto"
           },
-          "timeShift": "5m",
           "title": "Accounts",
           "type": "stat",
           "targets": [
@@ -1205,6 +1175,7 @@ data:
       "time": { "from": "now-24h", "to": "now" },
       "timepicker": {},
       "timezone": "Europe/Lisbon",
+      "description": "Note: Data is delayed ~5-7 minutes from real-time due to Cloudflare analytics API propagation and scrape delay.",
       "title": "Cloudflare",
       "uid": "cloudflare-overview",
       "version": 1
