--- a/kubernetes/apps/hubble/kustomization.yaml
+++ b/kubernetes/apps/hubble/kustomization.yaml
@@ -1,6 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+resources:
+  - ingressroute.yaml
+
 helmCharts:
   - name: cilium
     repo: https://helm.cilium.io/
