--- a/kubernetes/apps/elastic-system/ingressroute.yaml
+++ b/kubernetes/apps/elastic-system/ingressroute.yaml
@@ -1,4 +1,12 @@
 apiVersion: traefik.io/v1alpha1
+kind: ServersTransport
+metadata:
+  name: kibana-transport
+  namespace: elastic-system
+spec:
+  insecureSkipVerify: true
+---
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: kibana
@@ -15,4 +23,6 @@ spec:
       services:
         - name: kibana-kb-http
           port: 5601
+          scheme: https
+          serversTransport: kibana-transport
   tls: {}
