--- a/kubernetes/apps/elastic-system/kustomization.yaml
+++ b/kubernetes/apps/elastic-system/kustomization.yaml
@@ -26,7 +26,8 @@ helmCharts:
               node.store.allow_mmap: false
               xpack.security.authc.api_key.enabled: true
               xpack.security.authc.anonymous.username: anonymous
-              xpack.security.authc.anonymous.roles: superuser
+              xpack.security.authc.anonymous.roles:
+                - superuser
               xpack.security.authc.anonymous.authz_exception: false
             volumeClaimTemplates:
               - metadata:
@@ -61,11 +62,6 @@ helmCharts:
           xpack.security.authc.providers:
             anonymous.anonymous1:
               order: 0
-              credentials:
-                username: anonymous
-                password: anonymous
-            basic.basic1:
-              order: 1
           xpack.fleet.agents.elasticsearch.hosts: ["https://elasticsearch-es-http.elastic-system.svc:9200"]
           xpack.fleet.agents.fleet_server.hosts: ["https://fleet-server-agent-http.elastic-system.svc:8220"]
           xpack.fleet.packages:
