--- a/kubernetes/apps/elastic-system/kustomization.yaml
+++ b/kubernetes/apps/elastic-system/kustomization.yaml
@@ -5,6 +5,7 @@ namespace: elastic-system
 resources:
   - namespace.yaml
   - ingressroute.yaml
+  - es-anonymous-user.yaml
 
 helmCharts:
   - name: eck-stack
@@ -25,10 +26,6 @@ helmCharts:
             config:
               node.store.allow_mmap: false
               xpack.security.authc.api_key.enabled: true
-              xpack.security.authc.anonymous.username: anonymous
-              xpack.security.authc.anonymous.roles:
-                - superuser
-              xpack.security.authc.anonymous.authz_exception: false
             volumeClaimTemplates:
               - metadata:
                   name: elasticsearch-data
@@ -62,6 +59,9 @@ helmCharts:
           xpack.security.authc.providers:
             anonymous.anonymous1:
               order: 0
+              credentials:
+                username: kibana_anonymous
+                password: "kibana_anonymous_password"
           xpack.fleet.agents.elasticsearch.hosts: ["https://elasticsearch-es-http.elastic-system.svc:9200"]
           xpack.fleet.agents.fleet_server.hosts: ["https://fleet-server-agent-http.elastic-system.svc:8220"]
           xpack.fleet.packages:
