add Cloudflare Logpush integration setup job (13 data streams from R2 bucket)

--- a/kubernetes/apps/elastic-system/kustomization.yaml
+++ b/kubernetes/apps/elastic-system/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
   - namespace.yaml
   - ingressroute.yaml
   - es-anonymous-user.yaml
+  - es-cloudflare-logpush.yaml
 
 helmCharts:
   - name: eck-stack
