add Cloudflare Logpush integration: R2 credentials via SealedSecret + setup Job (13 data streams)

--- a/kubernetes/apps/elastic-system/kustomization.yaml
+++ b/kubernetes/apps/elastic-system/kustomization.yaml
@@ -6,6 +6,8 @@ resources:
   - namespace.yaml
   - ingressroute.yaml
   - es-anonymous-user.yaml
+  - r2-logpush-credentials.sealedsecret.yaml
+  - es-cloudflare-logpush.yaml
 
 helmCharts:
   - name: eck-stack
