--- a/kubernetes/apps/elastic-system/kustomization.yaml
+++ b/kubernetes/apps/elastic-system/kustomization.yaml
@@ -68,6 +68,14 @@ helmCharts:
               order: 1
           xpack.fleet.agents.elasticsearch.hosts: ["https://elasticsearch-es-http.elastic-system.svc:9200"]
           xpack.fleet.agents.fleet_server.hosts: ["https://fleet-server-agent-http.elastic-system.svc:8220"]
+          xpack.fleet.outputs:
+            - id: fleet-default-output
+              name: default
+              type: elasticsearch
+              hosts: ["https://elasticsearch-es-http.elastic-system.svc:9200"]
+              is_default: true
+              is_default_monitoring: true
+              ca_trusted_fingerprint: "ed7fda01b6b53193ca1b1045a0034df45a46467526a64c4d878ebd3b3c9ce16e"
           xpack.fleet.packages:
             - name: system
               version: latest
