increase Fleet Server memory to 1Gi (13 S3 streams cause OOM at 512Mi)

--- a/kubernetes/apps/elastic-system/kustomization.yaml
+++ b/kubernetes/apps/elastic-system/kustomization.yaml
@@ -134,11 +134,11 @@ helmCharts:
                 - name: agent
                   resources:
                     requests:
-                      memory: 256Mi
+                      memory: 512Mi
                       cpu: 100m
                     limits:
-                      memory: 512Mi
-                      cpu: 500m
+                      memory: 1Gi
+                      cpu: 1
       eck-agent:
         enabled: false
       eck-beats:
